complete call graph analysis application